<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_raid_calculator"
        android:icon="@drawable/rocket_image"
        android:enabled="true"
        android:title="@string/raid_calculator" />
    <item
        android:id="@+id/menu_furnace"
        android:enabled="true"
        android:icon="@drawable/large_furnace_icon"
        android:title="@string/furnace_info" />
    <item
        android:id="@+id/menu_blueprints"
        android:enabled="true"
        android:icon="@drawable/blueprints"
        android:title="@string/blueprints" />
    <item
        android:id="@+id/menu_info"
        android:enabled="true"
        android:icon="@drawable/info"
        android:title="@string/info" />
    <item
        android:id="@+id/menu_purchase"
        android:enabled="true"
        android:icon="@drawable/vending_machine_icon"
        android:title="@string/purchase" />
</menu>