<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgFurnace"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/purchaseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:textSize="20sp"
            android:textColor="@color/toolbarText"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:src="@drawable/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseToolbar"/>

    <TextView
        android:id="@+id/purchaseText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/removeAds"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/app_logo"
        app:layout_constraintBottom_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toEndOf="@id/app_logo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/adsOff"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/adsOff"
        android:layout_marginTop="40dp"
        android:textColor="@color/bgFurnace"
        android:background="@drawable/btn_purchase_bg"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"/>

<!--    <Button-->
<!--        android:id="@+id/restorePurchase"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/restorePurchase"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textColor="@color/bgFurnace"-->
<!--        android:background="@drawable/btn_purchase_bg"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/adsOff"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>